# substample

./: LICENSE  README.md
client/: nuxt.config.ts  package.json  tsconfig.json
client/src/layouts/: default.vue
client/src/pages/: index.vue  test.ts
node/: Cargo.toml  README.md
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs  template.rs
node/runtime/wasm/: Cargo.toml  build.sh
node/runtime/wasm/src/: lib.rs
node/src/: chain_spec.rs  main.rs  service.rs
tmp/: index.js  index.ts  package.json  tsconfig.json
