[[bin]]
name = 'substample'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substample'
version = '1.0.0'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '1.8'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.substample-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ea3b7701be226e7b155da2398ce6e56d0fdf4185'
[profile.release]
panic = 'unwind'
