[dependencies.substample-runtime]
default-features = false
path = '..'

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substample-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['substample-runtime/std']
